--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -82,6 +82,9 @@
         visibility: hidden;
         position: absolute;
     }
+    .navbar-right {
+        margin-right: 15px;
+    }
 }
 
 @media(max-width:767px) {
