--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -12,6 +12,10 @@
     width: 235px;
 }
 
+.omega_countdown {
+    margin-left: 250px;
+}
+
 // Custom Navigation Bar
 .navbar-custom {
     background-color: white;
