--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -38,7 +38,7 @@
         </a>
       </div>
         
-      <div class="row socials slidedown smartphone">
+      <div class="row socials slidedown smartphone col-xs-8">
         <div class="col-md-6 col-md-offset-6 header-pics navbar-right">
           <div class="links_social">
             <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
@@ -57,7 +57,7 @@
         </div>
       </div>
       
-      <div class="navbar-header">
+      <div class="navbar-header col-xs-4">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
               <span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
           </button>
