--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -38,7 +38,7 @@
         </a>
       </div>
         
-      <div class="row socials slidedown smartphone">
+      <div class="row socials slidedown smartphone col-xs-8">
         <div class="col-md-6 col-md-offset-6 header-pics navbar-right">
           <div class="links_social">
             <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
