--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -81,6 +81,9 @@
         margin: 0;
         padding: 0;
     }
+    .navbar-toggle {
+        margin-top: -5px;
+    }
 }
 
 @media(min-width:768px) {
