--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -81,7 +81,7 @@
         margin: 0;
         padding: 0;
     }
-    .navbar-toggle {
+    .navbar-toggle.collapsed {
         margin-top: -5px;
     }
 }
