--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -69,6 +69,7 @@
     }
     .navbar-collapse.collapse.in {
         max-height: 380px;
+        width: 110%;
     }
     .row.socials.slidedown.smartphone {
         visibility: visible;
