--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -82,8 +82,8 @@
         margin: 0;
         padding: 0;
     }
-    .navbar-toggle.collapsed {
-        margin-top: -5px;
+    .navbar-toggle {
+        margin-top: -5px !important;
     }
 }
 
