--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -4,6 +4,16 @@
 
 <div class="carousel_container">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    
+    <div class="hero">
+        <div class="container">
+            <h1 class="the_claim">{% t pages.index.title1.part1 %}<br/><span class="accent">{% t pages.index.title1.part2 %}</span></h1>
+            <h1 class="the_claim">{% t pages.index.title2.part1 %}<br/><span class="accent">{% t pages.index.title2.part2 %}</span></h1>
+            <h1 class="the_claim">{% t pages.index.title3.part1 %}<br/><span class="accent">{% t pages.index.title3.part2 %}</span></h1>
+            <h1 class="the_claim">{% t pages.index.title4.part1 %}<br/><span class="accent">{% t pages.index.title4.part2 %}</span></h1>
+        </div>
+    </div>
+    
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
