--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -37,4 +37,12 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+  <div class="carousel_text">
+    <div class="carousel_caption">
+        <h1 class="the_claim">{% t pages.index.title1.part1 %}<br/><span class="accent">{% t pages.index.title1.part2 %}</span></h1>
+        <h1 class="the_claim">{% t pages.index.title2.part1 %}<br/><span class="accent">{% t pages.index.title2.part2 %}</span></h1>
+        <h1 class="the_claim">{% t pages.index.title3.part1 %}<br/><span class="accent">{% t pages.index.title3.part2 %}</span></h1>
+        <h1 class="the_claim">{% t pages.index.title4.part1 %}<br/><span class="accent">{% t pages.index.title4.part2 %}</span></h1>
+    </div>
+</div>
 </div>
