--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -13,7 +13,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="http://placehold.it/1200x500/3498db/2980b9" alt="First slide">
+                        <img src="/images/home/1920x1080.jpg" alt="First slide">
                         <div class="carousel-caption">
                             <h3>
                                 First slide</h3>
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="http://placehold.it/1200x500/9b59b6/8e44ad" alt="Second slide">
+                        <img src="/images/home/1920x1080-1.jpg" alt="Second slide">
                         <div class="carousel-caption">
                             <h3>
                                 Second slide</h3>
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="http://placehold.it/1200x500/34495e/2c3e50" alt="Third slide">
+                        <img src="/images/home/1920x1080-2.png" alt="Third slide">
                         <div class="carousel-caption">
                             <h3>
                                 Third slide</h3>
