--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -14,30 +14,12 @@
                 <div class="carousel-inner">
                     <div class="item active">
                         <img src="/images/home/1920x1080.jpg" alt="First slide">
-                        <div class="carousel-caption">
-                            <h3>
-                                First slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
                     </div>
                     <div class="item">
                         <img src="/images/home/1920x1080-1.jpg" alt="Second slide">
-                        <div class="carousel-caption">
-                            <h3>
-                                Second slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
                     </div>
                     <div class="item">
                         <img src="/images/home/1920x1080-2.png" alt="Third slide">
-                        <div class="carousel-caption">
-                            <h3>
-                                Third slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
                     </div>
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -46,15 +28,13 @@
                         </span></a>
             </div>
             <div class="main-text hidden-xs">
-                <div class="col-md-12 text-center">
-                    <h1>
-                        Static Headline And Content</h1>
-                    <h3>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    </h3>
-                    <div class="">
-                        <a class="btn btn-clear btn-sm btn-min-block" href="http://www.jquery2dotnet.com/">Login</a><a class="btn btn-clear btn-sm btn-min-block"
-                            href="http://www.jquery2dotnet.com/">Registration</a></div>
+                <div class="hero">
+                    <div class="container">
+                        <h1 class="the_claim">{% t pages.index.title1.part1 %}<br/><span class="accent">{% t pages.index.title1.part2 %}</span></h1>
+                        <h1 class="the_claim">{% t pages.index.title2.part1 %}<br/><span class="accent">{% t pages.index.title2.part2 %}</span></h1>
+                        <h1 class="the_claim">{% t pages.index.title3.part1 %}<br/><span class="accent">{% t pages.index.title3.part2 %}</span></h1>
+                        <h1 class="the_claim">{% t pages.index.title4.part1 %}<br/><span class="accent">{% t pages.index.title4.part2 %}</span></h1>
+                    </div>
                 </div>
             </div>
         </div>
