--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -169,14 +169,13 @@ html .hero {
         margin-top: 125px;
     }
 }
-.main-text
-{
+.main-text {
     position: absolute;
     top: 50px;
     width: 96.66666666666666%;
     color: #FFF;
 }
-.carousel-inner .item {
+.carousel-inner.item {
     display: none;
     position: relative;
     .transition(2s ease-in-out left);
