--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -13,13 +13,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="/images/home/1920x1080.jpg" alt="First slide">
+                        <img src="/images/home/1880x700.jpg" alt="First slide">
                     </div>
                     <div class="item">
-                        <img src="/images/home/1920x1080-1.jpg" alt="Second slide">
+                        <img src="/images/home/1880x700-1.jpg" alt="Second slide">
                     </div>
                     <div class="item">
-                        <img src="/images/home/1920x1080-2.png" alt="Third slide">
+                        <img src="/images/home/1880x700-2.jpg" alt="Third slide">
                     </div>
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
