--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -161,6 +161,7 @@ html .hero {
     margin-top: 150px;
     margin-left: 0;
     margin-right: 0;
+    width: 100%;
     @media (max-width: 991px) {
         margin-top: 210px;
     }
