--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -159,8 +159,8 @@ html .hero {
 
 .carousel_container {
     margin-top: 150px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
     width: 100%;
     @media (max-width: 991px) {
         margin-top: 210px;
