--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -161,7 +161,7 @@ html .hero {
     margin-top: 150px;
     margin-left: 0 !important;
     margin-right: 0 !important;
-    width: 100%;
+    width: 100% !important;
     @media (max-width: 991px) {
         margin-top: 210px;
     }
