--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -5,7 +5,7 @@
 <div class="container carousel_container">
     <div class="row">
         <div class="col-md-12">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="2000">
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
@@ -27,7 +27,7 @@
                         href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
                         </span></a>
             </div>
-            <div class="main-text hidden-xs">
+            <div class="main-text">
                 <div class="hero">
                     <div class="container">
                         <h1 class="the_claim">{% t pages.index.title1.part1 %}<br/><span class="accent">{% t pages.index.title1.part2 %}</span></h1>
