--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -159,9 +159,10 @@ html .hero {
 
 .carousel_container {
     margin-top: 150px;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
     width: 100% !important;
+    max-width:1880px !important;
     @media (max-width: 991px) {
         margin-top: 210px;
     }
