--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -163,6 +163,7 @@ html .hero {
     margin-right: auto !important;
     width: 100% !important;
     max-width:1880px !important;
+    padding: 0 !important;
     @media (max-width: 991px) {
         margin-top: 210px;
     }
