--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,4 +1,9 @@
 .the_claim {
+    @media (min-width: 1351px) {
+        font-size: 45px !important;
+        line-height: 70px !important;
+        font-weight: 700 !important;
+    }
     @media (max-width: 1350px) {
         font-size: 30px !important;
         line-height: 35px !important;
@@ -37,9 +42,6 @@
     position: absolute;
     color: #FFFFFF;
     width: inherit;
-    font-size: 45px !important;
-    line-height: 70px !important;
-    font-weight: 700 !important;
     text-transform: uppercase;
     opacity: 0;
     -webkit-animation-duration: 1.5s;
