--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -7,10 +7,14 @@
     @media (max-width: 1350px) {
         font-size: 30px !important;
         line-height: 35px !important;
+        font-weight: 700 !important;
+        margin-top: -30px !important;
     }
     @media (max-width: 767px) {
         font-size: 15px !important;
         line-height: 25px !important;
+        font-weight: 700 !important;
+        margin-top: -40px !important;
     }
 }
 
