--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,7 +1,13 @@
 html .hero {
     background-image: url('../images/home/2YTG_cover.png');
     background-size: cover;
-    
+    height: 900px;
+    @media (max-width: 1921px) {
+        height: 900px;
+    } // Width of image
+    @media (max-width: 1651px) {
+        height: 900px;
+    }
     .container {
         padding: 230px 0 0 0;
         @media (max-width: 650px) {
