--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -8,6 +8,32 @@ html .hero {
     @media (max-width: 1651px) {
         height: 900px;
     }
+    @media (max-width: 1501px) {
+        height: 700px;
+    }
+    @media (max-width: 1250px) {
+        height: 700px;
+    }
+    @media (max-width: 1155px) {
+        height: 600px;
+        margin-top:100px;
+    }
+    @media (max-width: 990px) {
+        height: 500px;
+        margin-top:150px;
+    }
+    @media (max-width: 830px) {
+        height: 400px;
+        margin-top:150px;
+    }
+    @media (max-width: 680px) {
+        height: 300px;
+        margin-top: 100px;
+    }
+    @media (max-width: 510px) {
+        height: 200px;
+        margin-top: 100px;
+    }
     .container {
         padding: 230px 0 0 0;
         @media (max-width: 650px) {
