--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,5 +1,5 @@
 html .hero {
-    background-image: url('../images/home/2YTG_cover.png');
+    background-image: url('../images/home/2YTG-2.png');
     background-size: cover;
     height: 900px;
     @media (max-width: 1921px) {
