--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -29,17 +29,17 @@
         </div>
       </div>
       <a class="nav-brand" href="{{nav[0].path}}">
-        <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" width="235" />
+        <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" height="153" />
       </a>
       
       <script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
       <script src="../js/vendors/countdown.js" type="text/javascript" ></script>
-	    <link rel="stylesheet" type="text/css" href="../css/countdown.css">
+      <link rel="stylesheet" type="text/css" href="../css/countdown.css">
       <link rel="stylesheet" type="text/css" href="../css/omegact.css">
 
       <div id="ad">
 		    <div id="countdown_container_tag" class="countdown_container">
-			    <div class="logo">
+			    <div class="logo_omega">
 				    <img src="../omega_countdown/official-timekeeper-omega-fr.jpg">
 				    <!-- <img class="retina" src="../omega_countdown/official-timekeeper-omega.svg"> -->
 			    </div>
