--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -39,7 +39,7 @@
 
       <div id="ad">
 		    <div id="countdown_container_tag" class="countdown_container">
-			    <div class="logo_omega">
+			    <div class="logo">
 				    <img src="../omega_countdown/official-timekeeper-omega-fr.jpg">
 				    <!-- <img class="retina" src="../omega_countdown/official-timekeeper-omega.svg"> -->
 			    </div>
