--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -9,7 +9,7 @@
 {% endif %}
 
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
-    <div class="container">
+    <div class="container" style="padding-left: 0;">
       <a class="nav-brand" href="{{nav[0].path}}">
         <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" height="153" />
       </a>
@@ -78,7 +78,7 @@
 
       <div class="navbar-collapse collapse" id="main-navbar">
 	  
-	    <div class="row socials slidedown">
+	    <div class="socials slidedown">
 		<div class="col-md-6 col-md-offset-6 header-pics navbar-right">
 		  <div class="links_social">
 		    <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
