--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -79,7 +79,7 @@
       <div class="navbar-collapse collapse" id="main-navbar">
 	  
 	    <div class="socials slidedown" style="position: relative; float: left;">
-		<div class="col-md-6 col-md-offset-6 header-pics navbar-right" style="width: auto; float: left;">
+		<div class="col-md-6 col-md-offset-6 header-pics navbar-right" style="width: auto; float: left !important; margin:0;">
 		  <div class="links_social">
 		    <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
 		      <img height="30" src="/images/layout/Instagram-logo.png">
@@ -96,7 +96,7 @@
 		  </div>
 		</div>
 	      </div>
-          <div class="nav navbar-nav navbar-right">
+          <div class="nav navbar-nav navbar-right" style="float: right; margin-right: 0;">
 
             {% for link in nav %}
 
