--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -9,7 +9,7 @@
 {% endif %}
 
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
-    <div class="container" style="padding-left: 0;">
+    <div class="container" style="padding-right: 0;">
       <a class="nav-brand" href="{{nav[0].path}}">
         <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" height="153" />
       </a>
