--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -10,8 +10,8 @@
 
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
     <div class="container" style="padding-right: 0;">
-      <a class="nav-brand" href="{{nav[0].path}}">
-        <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" height="153" />
+      <a class="nav-brand" href="{{nav[0].path}}" style="width:40%;">
+        <img class="logo" src="/images/layout/Lausanne2020-Emblem.png" style="width: 80%; margin-left: 10%;" />
       </a>
       
       <script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
@@ -19,7 +19,7 @@
       <link rel="stylesheet" type="text/css" href="../css/countdown.css">
       <link rel="stylesheet" type="text/css" href="../css/omegact.css">
 
-      <div id="ad">
+      <div id="ad" style="width:50%">
 	<div id="countdown_container_tag" class="countdown_container">
 	  <div class="logo">
 	    <img src="../omega_countdown/official-timekeeper-omega-fr.jpg">
