--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -20,7 +20,7 @@
       <link rel="stylesheet" type="text/css" href="../css/omegact.css">
 
       <div id="ad" style="width:50%">
-	<div id="countdown_container_tag" class="countdown_container">
+	<div id="countdown_container_tag" class="countdown_container" style="transform: scale(0.8);">
 	  <div class="logo">
 	    <img src="../omega_countdown/official-timekeeper-omega-fr.jpg">
 	    <!-- <img class="retina" src="../omega_countdown/official-timekeeper-omega.svg"> -->
