--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -20,7 +20,7 @@
       <link rel="stylesheet" type="text/css" href="../css/omegact.css">
 
       <div id="ad" style="width:50%">
-	<div id="countdown_container_tag" class="countdown_container" style="transform: scale(0.8);">
+	<div id="countdown_container_tag" class="countdown_container">
 	  <div class="logo">
 	    <img src="../omega_countdown/official-timekeeper-omega-fr.jpg">
 	    <!-- <img class="retina" src="../omega_countdown/official-timekeeper-omega.svg"> -->
@@ -56,27 +56,23 @@
               <span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
           </button>
       </div>
-
+      <div class="socials slidedown col-lg-4 col-md-4">
+	  <div class="links_social">
+	    <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+	      <img height="30" src="/images/layout/Instagram-logo.png">
+	    </a>
+	    <a href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+	      <img height="30" src="/images/layout/facebook-icon.png">
+	    </a>
+	    <a href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+	      <img height="24" src="/images/layout/twitter-icon.svg">
+	    </a>
+	    <a href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+	      <img height="24" src="/images/layout/YouTube-icon.png">
+	    </a>
+	  </div>    
+      </div>
       <div class="navbar-collapse collapse" id="main-navbar">
-	  
-	    <div class="socials slidedown" style="position: relative; float: left;">
-		<div class="col-md-6 col-md-offset-6 header-pics navbar-right" style="width: auto; float: left !important; margin:0; padding-top: 10px;">
-		  <div class="links_social">
-		    <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-		      <img height="30" src="/images/layout/Instagram-logo.png">
-		    </a>
-		    <a href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-		      <img height="30" src="/images/layout/facebook-icon.png">
-		    </a>
-		    <a href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-		      <img height="24" src="/images/layout/twitter-icon.svg">
-		    </a>
-		    <a href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-		      <img height="24" src="/images/layout/YouTube-icon.png">
-		    </a>
-		  </div>
-		</div>
-	      </div>
           <div class="nav navbar-nav navbar-right" style="float: right; margin-right: 0;">
 
             {% for link in nav %}
