--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -8,8 +8,14 @@
     float: left;
 }
 
-.omega_countdown {
-    margin-left: 250px;
+#socials {
+    float: left;
+    width: 30%;
+    margin-top: 15px;
+}
+
+.main-navbar {
+    float: right;
 }
 
 // Custom Navigation Bar
