--- a/css/countdown.css
+++ b/css/countdown.css
@@ -1,10 +1,12 @@
 #ad {
 	position: relative;
 	float: right;
+	height: 123px;
 }
 .countdown_container {
 	transform: scale(0.8) !important;
 	position: relative;
+	margin-left: 20%;
 	width: 484px;
 	height: 153px;
 	border: 0 solid #9f9f9f;
