--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -8,13 +8,13 @@
     float: left;
 }
 
-#socials {
+.socials {
     float: left;
     width: 30%;
     margin-top: 15px;
 }
 
-.main-navbar {
+#main-navbar {
     float: right;
 }
 
