--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -12,13 +12,16 @@
     float: left;
     width: 30%;
     margin-top: 15px;
+    @media (max-width: 1199px) {
+	margin-top: 35px;    
+    }
     @media (max-width: 991px) {
 		width: 25%;
         text-align: left;
         a {
             margin-right: 5px;
         }
-	}
+    }
 }
 
 #main-navbar {
