--- a/css/countdown.css
+++ b/css/countdown.css
@@ -1,4 +1,12 @@
-@media (max-width: 1199px) {
+@media (min-width: 1200px) {
+	#ad {
+		height: 123px;
+	}
+	.countdown_container {
+		transform: scale(0.8) !important;
+	}
+}
+@media (min-width: 992px) {
 	#ad {
 		height: 102px;
 	}
@@ -6,7 +14,7 @@
 		transform: scale(0.7) !important;
 	}
 }
-@media (max-width: 991px) {
+@media (min-width: 767px) {
 	#ad {
 		height: 79px;
 	}
@@ -17,10 +25,8 @@
 #ad {
 	position: relative;
 	float: right;
-	height: 123px;
 }
 .countdown_container {
-	transform: scale(0.8) !important;
 	position: relative;
 	margin-left: 20%;
 	width: 484px;
