--- a/css/countdown.css
+++ b/css/countdown.css
@@ -6,7 +6,7 @@
 		transform: scale(0.8) !important;
 	}
 }
-@media (min-width: 992px) {
+@media (max-width: 1199px) {
 	#ad {
 		height: 102px;
 	}
@@ -14,7 +14,7 @@
 		transform: scale(0.7) !important;
 	}
 }
-@media (min-width: 767px) {
+@media (max-width: 991px) {
 	#ad {
 		height: 79px;
 	}
