--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -16,9 +16,9 @@
     }
     @media (max-width: 1199px) {
 	width: 30%;
-	margin-top: 35px;    
+	margin-top: 15px;    
     }
-    @media (min-width: 991px) {
+    @media (max-width: 991px) {
 	width: 25%;
         text-align: left;
         a {
