--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -21,9 +21,14 @@
     @media (max-width: 991px) {
 	width: 25%;
         text-align: left;
-        a {
-            margin-right: 5px;
-        }
+    }
+}
+
+.links_social a {
+    @media (max-width: 991px) {
+	    a {
+            	margin-right: 5px;
+            }
     }
 }
 
