--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -58,16 +58,16 @@
       </div>
       <div class="socials slidedown col-lg-4 col-md-4">
 	  <div class="links_social">
-	    <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+	    <a class="socials" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
 	      <img height="30" src="/images/layout/Instagram-logo.png">
 	    </a>
-	    <a href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+	    <a class="socials" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
 	      <img height="30" src="/images/layout/facebook-icon.png">
 	    </a>
-	    <a href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+	    <a class="socials" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
 	      <img height="24" src="/images/layout/twitter-icon.svg">
 	    </a>
-	    <a href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+	    <a class="socials" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
 	      <img height="24" src="/images/layout/YouTube-icon.png">
 	    </a>
 	  </div>    
