--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -24,11 +24,9 @@
     }
 }
 
-.links_social {
+.socials_links {
     @media (max-width: 991px) {
-	    a {
-		    margin-right: 5px;
-    	    }
+	margin-right: 5px;
     }
 }
 
