--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -51,12 +51,28 @@
           $('#countdown_container_tag').countdown({'lang': 'fr' });
         </script>
       </div>  
+      <div class="socials slidedown smartphone col-lg-4 col-md-4">
+	  <div class="links_social">
+	    <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+	      <img height="30" src="/images/layout/Instagram-logo.png">
+	    </a>
+	    <a class="socials_links" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+	      <img height="30" src="/images/layout/facebook-icon.png">
+	    </a>
+	    <a class="socials_links" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+	      <img height="24" src="/images/layout/twitter-icon.svg">
+	    </a>
+	    <a class="socials_links" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+	      <img height="24" src="/images/layout/YouTube-icon.png">
+	    </a>
+	  </div>    
+      </div>
       <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
               <span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
           </button>
       </div>
-      <div class="socials slidedown col-lg-4 col-md-4">
+      <div class="socials slidedown desktop col-lg-4 col-md-4">
 	  <div class="links_social">
 	    <a class="socials_links" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
 	      <img height="30" src="/images/layout/Instagram-logo.png">
